--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!---->
 
     <div id="carouselExampleControls" class="main-slider carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
+      <div class="carousel-inner">
       <div class="carousel-item active">
         <a href="#">
           <img src="img/slide1.jpg" class="d-block w-100" alt="...">
@@ -258,7 +258,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
 
     <div class="home-assets">
       <div class="container container-color">
@@ -266,7 +265,7 @@
         <div class="home-assets-amount d-flex flex-wrap align-items-center justify-content-center">
             <span class="amount-icon order-1"></span>
             <span class="text order-2">Total Value Locked</span>
-            <span class="count-number amount-number order-lg-3 order-md-4 order-sm-4 order-4">2576778101.66</span>
+            <span class="amount-number count-number order-lg-3 order-md-4 order-sm-4 order-4">2576778101.66</span>
             <span class="amount-unit order-3">(USDT)</span>
         </div>
 
@@ -275,7 +274,7 @@
             <img src="img/icon/h-info-item-1-icon.png" class="icon-img">
             <span class="hi-name">Current TVL</span>
             <span class="hi-num">
-              <span class="amount-numbercard-item-value text-dark">1,380,055,521.53</span>
+              <span class="amount-numbercard-item-value count-number text-dark">13855521.53</span>
             </span>
             <span class="hi-name hi-currency">USDT</span>
           </div>
@@ -284,7 +283,7 @@
             <img src="img/icon/h-info-item-2-icon.png" class="icon-img">
             <span class="hi-name">Current TVL</span>
             <span class="hi-num">
-              <span class="amount-numbercard-item-value text-dark">1,196,722,580.13</span>
+              <span class="amount-numbercard-item-value count-number text-dark">119722580.13</span>
             </span>
             <span class="hi-name hi-currency">USDT</span>
           </div>
@@ -293,7 +292,7 @@
         <div class="price-card d-flex justify-content-between align-items-center">
           <div class="card-item">
             <div class="card-item-key">Current Price</div>
-            <div class="card-item-value text-dark"> $1.6786</div>
+            <div class="card-item-value text-dark">$<span class="count-number">16.786</span></div>
           </div>
           <div class="card-item">
             <div class="card-item-key">MDX Balance</div>
@@ -302,18 +301,15 @@
           </div>
           <div class="card-item">
             <div class="card-item-key"> Pending Rewards <span class="textEn">(HECO&amp;BSC)</span></div>
-            <div class="card-item-value text-dark"> $<span>134,784,164</span>
+            <div class="card-item-value text-dark"> $<span class="count-number">134784</span>
             </div>
           </div>
           <div class="card-item">
             <div class="card-item-key">
               <span>To be Repurchased (HECO&amp;BSC)</span>
-
               <span class="tooltip-button" data-toggle="tooltip" data-placement="right" title="When the amount to be repurchased is less than 500WUSDT, the repurchase will be suspended for burning and destruction.">
                 <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
               </span>
-
-
             </div>
             <div class="card-item-value text-dark"> $<span>4,999,047</span></div>
           </div>
@@ -345,24 +341,22 @@
                     <img src="img/icon/home-page/home-assets/boardroom.png" class="icon-img">
                     <span class=" text font-weight-bold">Boardroom</span>
                   </div>
-
                   <a href="#" class="text-white"> More
                     <img src="img/icon/home-page/home-assets/arrow-right.png" class="icon-img">
                   </a>
                 </header>
                 <table border="0" cellpadding="0" cellspacing="0">
                   <thead>
-                  <th class="al text-left text-dark">LP</th>
-                  <th class="jar">Earned</th>
-                  <th class="ar text-dark">APY</th>
-                  <th class="operation">Action</th>
+                    <th class="text-left text-dark">LP</th>
+                    <th>Earned</th>
+                    <th class="ar text-dark">APY</th>
+                    <th class="operation">Action</th>
                   </thead>
                   <tbody>
                   <tr>
-                    <td class="al text-left text-dark">MDX</td>
+                    <td class="text-left text-dark">MDX</td>
                     <td class="textEn">cow&amp;mdx</td>
-                    <td class="art text-success"><span>35.99</span>%
-                    </td>
+                    <td class="art text-success"><span>35.99</span>%</td>
                     <td class="operation-ar">
                       <div class="oper-buttons d-flex justify-content-around align-items-center">
                         <a href="#">Stake</a>
@@ -372,7 +366,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="al text-left text-dark">MDX</td>
+                    <td class="text-left text-dark">MDX</td>
                     <td class="textEn">WHT</td>
                     <td class="art text-success"><span>34.37</span>%
                     </td>
@@ -385,7 +379,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="al text-left text-dark">MDX</td>
+                    <td class="text-left text-dark">MDX</td>
                     <td class="textEn">MDX</td>
                     <td class="art text-success"><span>314.19</span>%
                     </td>
@@ -398,7 +392,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="al text-left text-dark">MDX</td>
+                    <td class="text-left text-dark">MDX</td>
                     <td class="textEn">NT</td>
                     <td class="art text-success"><span>0.03</span>%</td>
                     <td class="operation-ar">
@@ -510,40 +504,33 @@
               </div>
             </div>
           </div>
-
         </div>
 
         <div class="home-count-wrap">
-
           <div class="row">
             <div class="col-xl-6 col-lg-12">
               <div class="count d-flex justify-content-between">
                 <span class="desc"> Volume(24h)
                   <span class="textEn">(HECO&amp;BSC)</span>
-
                   <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
                     <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
                   </span>
-
                 </span>
                   <span class="amount text-dark">
                   $<span>768,846,105.52</span>
                 </span>
               </div>
             </div>
+
             <div class="col-xl-6 col-lg-12">
               <div class="count d-flex justify-content-between">
                 <span class="desc">Fee(24h)
                 <span class="textEn">(HECO&amp;BSC)</span>
-
                 <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
                   <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
                 </span>
-
               </span>
-                <span class="amount text-dark"> $
-                <span>2,306,538.32</span>
-              </span>
+              <span class="amount text-dark">$<span>2,306,538.32</span></span>
               </div>
             </div>
           </div>
@@ -580,11 +567,9 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
-
 
     <section class="home-using white-section">
       <div class="container">
