fix liquidity page

--- a/liquidity.html
+++ b/liquidity.html
@@ -217,16 +217,20 @@
 </div>
 <!---->
 
-
 <section class="banner-bar">
   <div class="container">
-
-    <h1 class="banner-title text-center text-white">Earn MDX By Staking LP &amp; Tokens</h1>
-
+    <h1 class="banner-title hide-mobile text-center text-white">Earn MDX By Staking LP &amp; Tokens</h1>
     <div class="text-center">
-      <p class="liquidity-mdx"> Current TVL <span class="count-number">1409313279.39</span>USDT</p>
+      <div class="liquidity-mdx">
+        <div class="liquidity-mdx-wrap">
+          <span class="hide-mobile">Current TVL</span>
+          <span class="hide-desktop">Total Value Locked (USDT)</span>
+          <span>
+            <span class="count-number">1409313279.39</span><span class="currency">USDT</span>
+          </span>
+        </div>
+      </div>
     </div>
-
   </div>
 </section>
 
@@ -283,7 +287,6 @@
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
           <div class="filter-section ">
-
             <div class="wrap sele-item">
               <button class="se-item-name child-item all-filter active"><span> All </span></button>
               <button class="se-item-name child-item usdt-filter" value="USDT"><span> USDT </span></button>
@@ -292,7 +295,6 @@
               <button class="se-item-name child-item ht-filter" value="HT"><span> HT </span></button>
               <button class="se-item-name child-item husd-filter" value="HUSD"><span> HUSD </span></button>
             </div>
-
           </div>
 
           <table id="example" class="table-liquidity table table-hover table-sm" cellspacing="0" width="100%">
@@ -307,8 +309,8 @@
               <th class="th-sm el-table_1_column_7"></th>
             </tr>
             </thead>
-            <tbody>
 
+            <tbody>
             <tr>
               <td rowspan="1" colspan="1" class="el-table_1_column_1 is-center">
                 <div class="cell">
@@ -2014,6 +2016,15 @@
     </div>
   </div>
 </div>
+
+<section class="cta-section">
+  <div class="container">
+    <div class="cta-banner">
+      <p class="title-banner">Join MDEX the Ecosystem with the Largest Transaction Volume HECO &amp; BSC, to Enjoy More Benefits for Your Token</p>
+      <button class="btn btn-light btn-rounded">apply to join</button>
+    </div>
+  </div>
+</section>
 
 <footer class="footer-desktop">
   <div class="container">
