fix bridge page

--- a/bridge.html
+++ b/bridge.html
@@ -219,10 +219,9 @@
 
 <section class="banner-bar">
   <div class="container-fluid">
-
-    <h1 class="banner-title text-center text-white">Heco Eco-Currency Trading Choose MDEX.COM for faster and better</h1>
-
-    <h2 class="banner-title-describe text-center">The largest DeFi ecosystem with DEX, IMO and DAO</h2>
+    <h1 class="banner-title text-center text-white hide-mobile">Heco Eco-Currency Trading Choose MDEX.COM for faster and better</h1>
+    <h1 class="banner-title text-white hide-desktop">Bridge</h1>
+    <h2 class="banner-title-describe text-center hide-mobile">The largest DeFi ecosystem with DEX, IMO and DAO</h2>
 
   </div>
 </section>
