fix priceplan page

--- a/priceplan.html
+++ b/priceplan.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assets/css/starter.css">
   <title>Bootstrap npm starter</title>
 </head>
-<body class="bridge-page">
+<body class="priceplan-page">
 
 <header class="main-header w-100">
 
@@ -219,23 +219,14 @@
 
 <section class="banner-bar">
   <div class="container-fluid">
-
     <h1 class="banner-title text-center text-white">MDEX Bug Bounty Campaign</h1>
-
     <h2 class="banner-title-describe text-center">Defend the security of MDEX users' assets and transactions</h2>
-
-
-
-
   </div>
 </section>
-
 
 <section class="introduce-section">
   <div class="container-fluid">
     <div class="inner-wrapper">
-
-
       <section class="banner">
         <div class="plantitle">
           <a class="btn btn-success btn-rounded" href="mailto:developer@mdex.com"><span>Submit  Report</span></a>
@@ -324,7 +315,7 @@
             </tr>
           </table>
 
-        <p> &nbsp;In addition to severity, rewards will also be weighed against the impact of bugs found and the difficulty level of finding them. </p>
+        <p>In addition to severity, rewards will also be weighed against the impact of bugs found and the difficulty level of finding them. </p>
 
         <h2>Review and reward timeline</h2>
 
@@ -363,7 +354,6 @@
   </div>
 
 </section>
-
 
 <footer class="footer-desktop">
   <div class="container">
